crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__operator__equals.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/equals.lox
---
success: true
exit_code: 0
----- stdout -----
true
true
false
true
false
true
false
false
false
false

----- stderr -----
