crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__operator__greater_or_equal_num_nonnum.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/greater_or_equal_num_nonnum.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: type error in binary operator `>=`: lhs has type `Number`, but rhs has type `String`
   ╭─[craftinginterpreters/test/operator/greater_or_equal_num_nonnum.lox:1:1]
   │
 1 │ 1 >= "1"; // expect runtime error: Operands must be numbers.
   │ ┬ ─┬ ─┬─  
   │ │  │  ╰─── this is of type `String`
   │ │  │      
   │ │  ╰────── the operator in question
   │ │         
   │ ╰───────── this is of type `Number`
   │ 
   │ Help: operator `>=` can only be applied to numbers
───╯
